Bug 405470 - Logout sound is not played under certain conditions
Summary: Logout sound is not played under certain conditions
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knotifications
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-14 15:42 UTC by Julius R.
Modified: 2019-03-19 20:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Julius R. 2019-03-14 15:42:24 UTC
SUMMARY
Logout sound is not played on shutdown, when choosen file is .mp3 with spaces in it's filename

STEPS TO REPRODUCE
1. Select System Settings->Notifications->Plasma Workspace->Log Out sound, filetype .mp3 with spaces in filename, e.g. "shutdown sound.mp3"
2. Apply settings
3. Initiate Shutdown

OBSERVED RESULT
No sound played

EXPECTED RESULT
Sound of logout being played, before shutdown

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro
(available in About System)
KDE Plasma Version: 5.15
KDE Frameworks Version: ?
Qt Version: ?

ADDITIONAL INFORMATION
Does work in general.
Comment 1 Kai Uwe Broulik 2019-03-14 16:30:23 UTC
We migrated notifications to use libcanberra which is a low-latency audio library. As such it only supports a limited number of codeces, such as OGG Vorbis.
Comment 2 Julius R. 2019-03-14 17:16:32 UTC
(In reply to Kai Uwe Broulik from comment #1)
> We migrated notifications to use libcanberra which is a low-latency audio
> library. As such it only supports a limited number of codeces, such as OGG
> Vorbis.

Thank you for the information, that solves the mystery. In that case, wouldn't it be user friendly to restrict the selection of filetypes to supported only? This was very confusing, for there is no error and the preview works fine with other codecs.
Comment 3 Kai Uwe Broulik 2019-03-16 13:30:26 UTC
Agreed: https://phabricator.kde.org/D19806

(The previewer has not yet been ported and still uses Phonon which can load all the codecs)
Comment 4 Kai Uwe Broulik 2019-03-19 20:10:29 UTC
Git commit 5e2b9c838f3f1a49e7a359a1bd0a087eceb90b10 by Kai Uwe Broulik.
Committed on 19/03/2019 at 20:09.
Pushed by broulik into branch 'master'.

Allow selecting only supported audio files

While Phonon could play all the files, libcanberra as a low-latency notification sound library only supports WAV and OGG*.

*) I didn't find documentation on this but ca_sound_file_open in libcanberra only has a wav and vorbis handler

Differential Revision: https://phabricator.kde.org/D19806

M  +2    -0    src/knotifyconfigactionswidget.cpp

https://commits.kde.org/knotifyconfig/5e2b9c838f3f1a49e7a359a1bd0a087eceb90b10