Allow selecting only supported audio files

While Phonon could play all the files, libcanberra as a low-latency notification sound library only supports WAV and OGG*.

*) I didn't find documentation on this but ca_sound_file_open in libcanberra only has a wav and vorbis handler

BUG: 405470

Differential Revision: https://phabricator.kde.org/D19806